--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Hello
-      run: echo Hello, world!
+    - name: Check env
+      run: env | sort
