--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -26,10 +26,10 @@ jobs:
         TEST: "Hello World"
       run: |
         echo $TEST >> artifact_file.txt
-        echo ${{ env.GITHUB_WORKSPACE }} >> artifact_file.txt
+        echo ${{ env.GITHUB_USER }} >> artifact_file.txt
 
     - name: upload artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: artifact
         path: artifact_file.txt
@@ -41,7 +41,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: download artifact
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v4
       with:
         name: artifact
 
