Fix syntax in matrix

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -4,6 +4,8 @@ on: [push]
 
 jobs:
   build:
+    runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.allow-failure }}
     strategy:
       fail-fast: false
       matrix:
@@ -11,9 +13,7 @@ jobs:
         allow-failure: [false]
         include:
           - java-version: 29
-            experimental: true
-    continue-on-error: ${{ matrix.allow-failure }}
-    runs-on: ubuntu-latest
+            allow-failure: true
 
     steps:
     - uses: actions/checkout@v2
