--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -2,6 +2,9 @@ name: hello
 
 on: [push]
 
+env:
+  RELEASE_BRANCH: main
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,7 +18,7 @@ jobs:
           - java-version: 29
             allow-failure: true
 
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == env.RELEASE_BRANCH }}
 
     env:
       ARTIFACT_FILE: my-file-${{ matrix.java-version }}.txt
@@ -24,7 +27,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Check env
-      run: env | sort
+      run: exit 1
 
     - uses: actions/setup-java@v1
       with:
@@ -51,8 +54,6 @@ jobs:
   test:
     needs: build
 
-    if: ${{ ! github.ref == 'refs/heads/main' }}
-
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.allow-failure }}
     strategy:
@@ -71,11 +72,13 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: download artifact
+      if: ${{ ! github.ref == env.RELEASE_BRANCH }}
       uses: actions/download-artifact@v4
       with:
         name: ${{ env.ARTIFACT_FILE }}
 
     - name: print artifact
+      if: ${{ ! github.ref == env.RELEASE_BRANCH }}
       run: |
         cat ${{ env.ARTIFACT_FILE }}
         
