--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,7 +15,7 @@ jobs:
           - java-version: 29
             allow-failure: true
 
-    if: ${{ github.ref == 'refs/head/main' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
 
     env:
       ARTIFACT_FILE: my-file-${{ matrix.java-version }}.txt
@@ -69,13 +69,13 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: download artifact
-      if: ${{ ! github.ref == 'refs/head/main' }}
+      if: ${{ ! github.ref == 'refs/heads/main' }}
       uses: actions/download-artifact@v4
       with:
         name: ${{ env.ARTIFACT_FILE }}
 
     - name: print artifact
-      if: ${{ ! github.ref == 'refs/head/main' }}
+      if: ${{ ! github.ref == 'refs/heads/main' }}
       run: |
         cat ${{ env.ARTIFACT_FILE }}
         
