--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Check env
-      run: exit 1
+      run: env
 
     - uses: actions/setup-java@v1
       with:
