--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,10 +12,11 @@ on: [push]
 
 jobs:
 
-#  build-gradle:
-#    uses: Dimpison/github-actions/.github/workflows/build-sample.yml@main
-#    with:
-#      gradle: .github/labeler.yml
+  build-gradle:
+    uses: Dimpison/github-actions/.github/workflows/build-sample.yml@main
+    with:
+      gradle-args: 'version'
+      gradle-version: '8.8'
 
   custom-build:
     runs-on: ubuntu-latest
