--- a/.github/workflows/build-sample.yml
+++ b/.github/workflows/build-sample.yml
@@ -26,12 +26,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 17
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
         distribution: 'openjdk'
         java-version: '17'
     - name: Set up Gradle ${{ inputs.gradle-version }}
-      uses: eskatos/setup-gradle@v2
+      uses: gradle/actions/setup-gradle@v4
       with:
         gradle-version: ${{ inputs.gradle-version }}
     - name: Build with Gradle ${{ inputs.gradle-version }}
