--- a/.github/workflows/build-sample.yml
+++ b/.github/workflows/build-sample.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        distribution: 'openjdk'
+        distribution: 'corretto'
         java-version: '17'
     - name: Set up Gradle ${{ inputs.gradle-version }}
       uses: gradle/actions/setup-gradle@v4
