Use gradle instead of wrapper

--- a/.github/workflows/build-sample.yml
+++ b/.github/workflows/build-sample.yml
@@ -36,4 +36,4 @@ jobs:
         gradle-version: ${{ inputs.gradle-version }}
     - name: Build with Gradle ${{ inputs.gradle-version }}
       run: |
-        ./gradlew ${{ inputs.gradle-args }}
+        gradle ${{ inputs.gradle-args }}
